<resources>
    <string name="app_name">VistasAvanzadas</string>
    <string name="label_action_save">Guardar</string>
    <string name="title_category">Descuentos</string>
    <string name="title_card_category">Alojamientos</string>
    <string name="body_card_category">Texto de ejemplo</string>
    <string name="ic_like">Like</string>
    <string name="ic_unlike">Unlike</string>
    <string name="ic_share">Share</string>
    <string name="ic_arrow_back">Arrow_Back</string>
    <string name="title_audio_21">AUDIO 21</string>
    <string name="label_datos">Dato</string>
    <string name="label_otros">Otros Salud y belleza</string>
    <string name="label_mail">No Disponible</string>
    <string name="label_telefono">602244020</string>
    <string name="label_web">https://audio21.es/</string>
    <string name="title_descuento">5% de descuento; 15%</string>
    <string name="label_descuento_in_library">5% de descuento en libreria; 15% Papeleria</string>
    <string name="label_descuento">Descuento</string>
</resources>