<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/AppSecondToolbar"
                android:elevation="0dp"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/tertiary_menu"
                app:title="@string/app_name"
                app:navigationIcon="@drawable/ic_arrow_back">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/spacing_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image"
                style="@style/AppMainCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp">
                <com.google.android.material.imageview.ShapeableImageView

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_height_image_card"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_library"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/dato"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_descuento"
                app:layout_constraintTop_toBottomOf="@id/image"
                style="@style/CustomTextViewStyle"/>

            <com.google.android.material.card.MaterialCardView
                style="@style/AppMainCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dato"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title"
                        style="@style/AppBodyCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_horizontal"
                        android:text="@string/title_descuento"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingTop="@dimen/spacing_vertical"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/description"
                        style="@style/AppBodyCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/spacing_vertical"
                        android:text="@string/label_descuento_in_library"
                        app:layout_constraintEnd_toEndOf="@id/title"
                        app:layout_constraintStart_toStartOf="@id/title"
                        app:layout_constraintTop_toBottomOf="@id/title"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>